# WinstyleS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WinstyleS_开发框架.md  build.py  launcher.py  pyproject.toml  ruff_errors.txt  start_web_ui.py  winstyles.spec
.agent/skills/bilingual-commit/: SKILL.md
.agent/skills/opensource-python-init/: SKILL.md
.agent/skills/opensource-python-init/templates/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE_MIT  README.md  ci.yml  conftest.py  pyproject.toml
.agent/skills/opensource-python-init/templates/src_skeleton/: __init__.py  __main__.py  main.py
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
data/: opensource_fonts.json
data/defaults/: win11_23h2.json
design-system/winstyles/: MASTER.md
docs/: design.md
frontend/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/winstyles/: __init__.py  __main__.py  main.py
src/winstyles/core/: __init__.py  analyzer.py  context.py  engine.py  exceptions.py  report.py  update_checker.py
src/winstyles/domain/: __init__.py  models.py  types.py
src/winstyles/gui/: __init__.py  app.py
src/winstyles/infra/: __init__.py  filesystem.py  registry.py  restore.py  system.py
src/winstyles/plugins/: __init__.py  base.py  cursor.py  fonts.py  terminal.py  theme.py  vscode.py  wallpaper.py
src/winstyles/utils/: __init__.py  font_utils.py  hashing.py  path.py
src/wss/: __init__.py  __main__.py  main.py
src/wss/core/: __init__.py  analyzer.py  context.py  engine.py  exceptions.py
src/wss/domain/: __init__.py  models.py  types.py
src/wss/gui/: __init__.py  app.py
src/wss/infra/: __init__.py  system.py
src/wss/plugins/: __init__.py  base.py  fonts.py  terminal.py
src/wss/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_cursor_scanner.py  test_engine_defaults_flatten.py  test_engine_export_assets.py  test_engine_import_routing.py  test_font_utils.py  test_fonts_scanner.py  test_import_asset_resolution.py  test_start_web_ui_mapping.py  test_terminal_apply.py  test_terminal_oh_my_posh.py  test_theme_scanner.py  test_utils_hashing.py  test_utils_path.py  test_wallpaper_scanner.py
