[project]
name = "winstyles"
version = "0.1.0"
description = "WinstyleS (Windows Style Sync) - Windows 个性化设置同步工具"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["windows", "sync", "style", "personalization", "customization", "theme"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "customtkinter>=5.2.0",
    "fonttools>=4.47.0",
    "pywin32>=306",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
winstyles = "winstyles.main:app"

[project.urls]
Homepage = "https://github.com/Thankyou-Cheems/WinstyleS"
Documentation = "https://thankyou-cheems.github.io/WinstyleS"
Repository = "https://github.com/Thankyou-Cheems/WinstyleS"
Issues = "https://github.com/Thankyou-Cheems/WinstyleS/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/winstyles"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/winstyles --cov-report=term-missing"
