[package]
name = "winstyles"
version = "0.1.0"
description = "WinstyleS Tauri GUI"
authors = ["Thankyou-Cheems"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
